Fix overflow issue with long words on Secondary Hero

--- a/src/amo/components/SecondaryHero/styles.scss
+++ b/src/amo/components/SecondaryHero/styles.scss
@@ -35,6 +35,7 @@
   font-weight: normal;
   line-height: 1.333;
   margin: 0;
+  word-break: break-word;
 
   .LoadingText {
     height: 1em;
@@ -43,6 +44,7 @@
 
 .SecondaryHero-message-description {
   padding: $padding-page 0;
+  word-break: break-word;
 
   @include respond-to(large) {
     padding: 8px 0 24px 0;
@@ -100,6 +102,7 @@
 .SecondaryHero-module-description,
 .SecondaryHero-module-link {
   width: 100%;
+  word-break: break-word;
 
   .LoadingText {
     height: 1em;
